Feat: added flamegraph sample